--- a/node_samples/package.json
+++ b/node_samples/package.json
@@ -15,12 +15,15 @@
   },
   "license": "ISC",
   "author": "Mygi",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "compile": "npx tsc"
   },
   "devDependencies": {
+    "@types/node": "^22.13.10",
+    "gts": "^6.0.2",
     "typescript": "^5.8.2"
   }
 }
