--- a/node_samples/package.json
+++ b/node_samples/package.json
@@ -22,8 +22,12 @@
     "compile": "npx tsc"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "gts": "^6.0.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   }
 }
