--- a/node_samples/package.json
+++ b/node_samples/package.json
@@ -26,13 +26,18 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "axios": "^1.8.3",
+    "express": "^4.21.2",
     "gts": "^6.0.2",
     "jest": "^29.7.0",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
     "ts-jest": "^29.2.6",
     "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.21",
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@types/express": "^5.0.0",
     "axios-typescript": "^1.0.2"
   }
 }
